# llm-arch-lab

./: .gitignore  LICENSE  README.md  bpe_tinystory.py  prepare_data.py  pyproject.toml  test_tokenizer.py
archlab/configs/: smoke.yaml  tinystory.yaml  tinystory_bsz128.yaml  tinystory_bsz32.yaml  tinystory_lr_1e-2.yaml  tinystory_lr_1e-3.yaml  tinystory_lr_3e-3.yaml  tinystory_no_norm_3e-3.yaml  tinystory_no_norm_3e-4.yaml  tinystory_post_norm_3e-3.yaml
archlab/model/: baseline.py
archlab/script/: generate.py  pretrain.py
archlab/tokenizer/: bpe_tokenizer.py
archlab/tokenizer/tinystory/: merges.pkl
archlab/trainer/: config.py  config_loader.py  train_model.py  train_tokenizer.py
