[project]
name = "archlab"
version = "0.1.0"
description = "Modern LLM architecture lab: dense baseline + MoE/linear-attention ablations"
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "einops>=0.8",      
    "einx>=0.4",        
    "jaxtyping>=0.3",   
    "numpy>=2.4",
    "regex>=2026.3.32", 
    "torch~=2.11.0",
    "tqdm>=4.67",
    "wandb>=0.25",      
]

[dependency-groups]
dev = [
    "ruff>=0.15.8",
    "ty>=0.0.26",
]

[build-system]
requires = ["uv_build>=0.11.0,<0.12.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "archlab"
module-root = ""

[tool.uv]
package = true
python-preference = "managed"

[tool.ruff]
line-length = 120

[tool.ruff.lint.extend-per-file-ignores]
"__init__.py" = ["E402", "F401", "F403", "E501"]

[tool.ruff.lint]
extend-select = ["UP"]
ignore = ["F722"]